src/test/deca/context/valid/oracle/this_herited.deca
class A {
    int a = 0;
}

class B extends A{
    int method(){
        return this.a;
    }
}