src/test/deca/context/invalid/oracle/equals_op_with_wrong_type2.deca
{
    78.0 == true;
}